--- a/hello.html
+++ b/hello.html
@@ -1,9 +1,22 @@
  <!DOCTYPE html>
  <html>
     <title>Personal Profile Page</title>
+    <head>
+      <body>
  <h1>About Me</h1>
+
+ <!--MY PICTURE-->
+ <img src="nwachi.jpeg" alt="2">
+
+ <!--Introduction-->
  <p>My name is Emuchay Nwachi, i am a graduate of university of Portharcourt, i love cooking and i studied philosophy, currently i am trying to brek into tech</p>
+ 
+ <!-- Social Media Links-->
  <ul>
+   <li><a href="https://www.facebook.com/EmuchayNwachi"></a></li>
+   target=" blank">Facebook</ul>a></body><li>
+<li><a href="https://twitter.com/EmuchayNwachi" target=" blank">twitter</a></li>
+
     <h1>My hobbies</h1>
     <li>I love cooking</li>
     <li>I love cleaning</li>
